--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -170,11 +170,22 @@
             $('#start_end').find('*').attr('disabled', false);
         });
 
-       var costs = '<%= @costs %>';
-        console.log(costs);
-
+        console.log( <%= @costs %>);
         $('#post_type').change(function() {
-            
+            if (this.value == 0) {
+                $('#post_cost').val(<%= @costs[0] %>);
+            }
+            else if (this.value == 1) {
+                $('#post_cost').val(<%= @costs[1] %>);
+            }
+            else if (this.value == 2) {
+                $('#post_cost').val(<%= @costs[2] %>);
+            }
+            else {
+                $('#post_cost').val(<%= @costs[3] %>);
+            }
+
+
         });
     })
 </script>
