- offer cycle complete. Need to make implement undo deny button for 30 sec and offer delete operation

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -43,7 +43,7 @@
         </div>
         <!-- start of pricing section -->
 
-        <% if influencer.facebook.present? %>
+        <% if influencer.facebook_accounts.present? %>
 
             <h4> Pricing</h4>
             <br>
