Influencer payment link added in sidebar

--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -53,6 +53,11 @@
     font-size: 11pt;
 }
 
+.payment-button-set {
+    text-align: right;
+}
+
+
 .payment-button-set label {
     padding-right: 15px;
 }
