--- a/app/views/payment_transactions/influencer_payment.html.erb
+++ b/app/views/payment_transactions/influencer_payment.html.erb
@@ -4,9 +4,9 @@
 
 <div class="bank-accounts">
 
-  <div class="payment-div ">
-    <div class="row payment-balance pull-right">Available<span class="space"></span>Balance:<span class="balance">$2500</span><span class="space"></span>USD</div>
-    <div class="row payment-button-set">
+  <div class="influencer-payment-div ">
+    <p class="payment-balance">Available<span class="space"></span>Balance:<span class="balance">$2500</span><span class="space"></span>USD</p>
+    <div class="">
       <%= label_tag 'withdraw_amount', 'Amount to Withdraw' %>
       <%= text_field_tag 'withdraw_amount', '' %>
       <!--<%#= link_to 'DOWNLOAD INVOICE', '', :class => 'btn btn-download', id: 'export_payments' %>-->
