--- a/app/views/payment_transactions/influencer_payment.html.erb
+++ b/app/views/payment_transactions/influencer_payment.html.erb
@@ -6,11 +6,10 @@
 
   <div class="influencer-payment-div ">
     <p class="payment-balance">Available<span class="space"></span>Balance:<span class="balance">$2500</span><span class="space"></span>USD</p>
-    <div class="">
+    <div class="amount-withdraw">
       <%= label_tag 'withdraw_amount', 'Amount to Withdraw' %>
       <%= text_field_tag 'withdraw_amount', '' %>
-      <!--<%#= link_to 'DOWNLOAD INVOICE', '', :class => 'btn btn-download', id: 'export_payments' %>-->
-      <button class="btn btn-withdraw" data-toggle="modal" data-target="#withdrawModal">WITHDRAW</button>
+      <button class="btn btn-withdraw" data-toggle="modal" data-target="#AddBankAccount">WITHDRAW</button>
     </div>
   </div>
 
@@ -44,22 +43,18 @@
 
   </table>
 
+  <a class="add-bank-account" data-toggle="modal" data-target="#withdrawModal"><i class="fa fa-plus"></i>&nbsp; Add Bank Account</a>
 
 </div>
 
 
 <div class="payment-content">
 
-  <ul class="nav nav-tabs" id="transaction-tabs">
-    <li class= "active">
-      <a href="#payment">
-        <%= image_tag('Transactions.png', :class => 'transaction-table') %> &nbsp; Transactions
-      </a>
-    </li>
-  </ul>
   <div class="tab-content">
-    <div class="panel panel-payment">
+    <div class="panel-payment">
       <div id="payment" class="tab-pane fade in active">
+        <%= image_tag('Transactions.png', :class => 'transaction-table') %> &nbsp; Transactions
+        <%= link_to 'DOWNLOAD INVOICE', '', :class => 'btn btn-influencer-download pull-right', id: 'export_payments' %>
 
         <table class="table table-striped table-bordered table-responsive payments_table">
           <thead>
@@ -103,15 +98,17 @@
 </div>
 
 <!-- Withdraw Modal -->
-<div class="modal fade" id="withdrawModal" role="dialog">
+<div class="modal fade" id="AddBankAccount" role="dialog">
   <div class="modal-dialog withdraw-modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content withdraw-modal-content">
+
       <div class="modal-header withdraw-modal-header">
         <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive withdraw-modal-logo') %></a>
         <button type="button" class="close withdraw-modal-close" data-dismiss="modal">&times; </button>
       </div>
+
       <div class="modal-body withdraw-modal-body">
         <p>The money will be in your bank account in 3-4 business days, depending on your bank.</p>
 
@@ -125,14 +122,12 @@
             </div>
           </div>
 
-
           <div class="row withdraw-modal-amount">
             <label for="amount" class="modal-amount col-md-3 col-xs-5">
               <p class="pull-right">Amount</p>
             </label>
             <span class="col-md-9 col-xs-7 padding-zero"><input type="text" class="modal-amount-input" id="amount">&nbsp;&nbsp;USD</span>
           </div>
-
 
           <div class="row withdraw-modal-bank">
             <div class="col-md-3 col-xs-5">
@@ -157,7 +152,6 @@
             </div>
           </div>
 
-
           <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-5 col-xs-2">
             </div>
@@ -169,7 +163,6 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
