--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -22,7 +22,7 @@
                             <h4 class="media-heading">{{name}}</h4>
                           </div>
                           <div class="media-right media-middle">
-                            <input type="checkbox" name="accounts[]" value="{{id}}">
+                            <input type="checkbox" name="accounts[]" value="{{id}}" {{#if selected}}checked{{/if}}>
                           </div>
                         </div>
                     {{/each}}
