--- a/app/views/shared/_add_account_modal.html.erb
+++ b/app/views/shared/_add_account_modal.html.erb
@@ -24,7 +24,9 @@
 
 <script>
     (function() {
-        $.getScript('//connect.facebook.net/en_UK/all.js', function(){
+        var selected = <%= @user.facebook_accounts.pluck(:account_id).to_json.html_safe %>;
+
+        $.getScript('//connect.facebook.net/en_US/all.js', function(){
             FB.init({
                 appId: '<%= CONFIG[:fb_app_id] %>',
                 xfbml: true,
@@ -32,10 +34,14 @@
             });
 
             var createForm = function(authResp) {
-                console.log(authResp);
                 FB.api('/me/accounts?fields=id,name,picture', function(resp) {
+                    var data = resp.data.map(function(page) {
+                        page.selected = $.inArray(page.id, selected) > -1;
+                        return page;
+                    });
+
                     var html = template({
-                        accounts: resp.data
+                        accounts: data
                     });
                     $('#AddFacebookAccount').remove();
                     $('body').append(html);
